[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlboard"
version = "2025.12.21124952"
description = "A new package that transforms unstructured user input about project management needs into a structured Trello-like board setup. Users describe their tasks, workflows, and preferences in plain text, an"
readme = "README.md"
authors = [{ name = "nlboard", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/nlboard"
